--- a/src/static/index.html
+++ b/src/static/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <header>
-      <h1>Mergington High School</h1>
-      <h2>Extracurricular Activities</h2>
+      <div class="header-content">
+        <img src="https://scpconteudos.pt/sites/all/themes/jump/android-chrome-192x192.png" alt="Sporting CP" class="club-logo" />
+        <div>
+          <h1>Mergington High School</h1>
+          <h2>Extracurricular Activities</h2>
+        </div>
+      </div>
     </header>
 
     <main>
